Bug #55774: In GetListOfFoldersWithPath(), make sure we pass the right folder object to DiscoverChildren(). r=bienvenu, sr=sspitzer.